# restaurant-voice-agent

./: .gitignore  README.md  pyproject.toml
data/: menu.json
docs/: 01-agents.md  02-conversation-flow.md  03-intent-routing.md  04-session-and-context.md  05-data-models.md  06-privacy-and-compliance.md  07-deployment.md  08-prompt-principles.md  09-x-article-context-engineering.md  09-x-article-context-engineering.mdx  index.md
src/: main.py
src/agents/: base.py  checkout.py  greeter.py  reservation.py  takeaway.py
src/config/: menu.py  settings.py  voices.py
src/core/: audit.py  context_manager.py  intent_embeddings.py  intent_router.py  metrics.py  output_validator.py  pii.py  resilience.py  token_counter.py
src/prompts/: checkout.yaml  greeter.yaml  greeter_dinner.yaml  greeter_lunch.yaml  greeter_returning.yaml  reservation.yaml  takeaway.yaml
src/services/: transcript_service.py
src/tools/: order_tools.py  reservation_tools.py  shared.py
src/utils/: logging.py  prompt_loader.py
