[project]
name = "restaurant-voice-agent"
version = "0.1.0"
description = "LiveKit multiagent restaurant voice assistant"
requires-python = ">=3.11"
dependencies = [
    # LiveKit — single package with extras, current stable is 1.4.x
    "livekit-agents[openai,deepgram,cartesia,silero,groq,anthropic,turn-detector]~=1.4.6",

    # Config & validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "logfire[pydantic]>=4.29.0",
    "sentence-transformers>=5.3.0",



    # YAML prompt loading
    "pyyaml>=6.0.3",

    # Structured logging
    "structlog>=24.0.0",

    # Utils
    "httpx>=0.28.1",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.19.1",
    "numpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ✅ ADD THIS — tells hatchling where your src package lives
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"